# exhibit

./: .coveragerc  .gitignore  .pylintrc  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  environment.yml  requirements.txt  setup.cfg  setup.py  unit_tests.py  working.py
.github/: dependabot.yml
.github/workflows/: codeql.yml  pr_tests_latest.yml
data/: sample.csv
demonstrator/: __init__.py  demodata.py
demonstrator/core/: generator.py  specs.py  utils.py
demonstrator/core/tests/: test_generator.py  test_spec.py  test_utils.py
demonstrator/sampledata/: __init__.py  data.py
demonstrator/sampledata/_data/: basic.csv
demonstrator/tests/: test_demodata.py
docs/: Diagrams.drawio  Scaling of numerical variables.ipynb
exhibit/: __init__.py  __main__.py  exhibit.py
exhibit/command/: bootstrap.py
exhibit/command/tests/: test_bootstrap.py  test_performance.py
exhibit/core/: _generator.py  constants.py  constraints.py  exhibit.py  formatters.py  generator.py  linkage.py  spec.py  specs.py  sql.py  utils.py  validator.py
exhibit/core/generate/: categorical.py  continuous.py  derived.py  geo.py  missing.py  regex.py  uuids.py  weights.py  yaml.py
exhibit/core/generate/tests/: test_categorical.py  test_continuous.py  test_derived.py  test_geo.py  test_missing.py  test_regex.py  test_uuid.py  test_weights.py  test_yaml.py
exhibit/core/linkage/: hierarchical.py  matrix.py
exhibit/core/linkage/tests/: test_linkage_hierarchical.py  test_linkage_matrix.py
exhibit/core/tests/: test_constraints.py  test_exhibit.py  test_formatters.py  test_generator.py  test_linkage.py  test_reference.py  test_spec.py  test_sql.py  test_utils.py  test_uuids.py  test_validator.py
exhibit/core/tests/_reference_data/: inpatients_anon_mnt_ct10.csv  inpatients_anon_mnt_ct50.csv  inpatients_anon_mnt_il10.csv  inpatients_anon_mnt_il50.csv  inpatients_anon_rnd_ct10.csv  inpatients_anon_rnd_ct50.csv  inpatients_anon_rnd_il10.csv  inpatients_anon_rnd_il50.csv  prescribing_anon_mnt_linked.csv  prescribing_anon_non_linked.csv
exhibit/db/: anon.db  db_util.py  exhibit.db
exhibit/models/: smoker_model.pickle
exhibit/sample/: __init__.py  sample.py
exhibit/sample/_data/: inpatients.csv  inpatients_SPEC.yml  inpatients_anon.csv  prescribing.csv  prescribing_SPEC.yml  prescribing_anon.csv  uuid_anon.csv
exhibit/sample/_spec/: inpatients.yml  inpatients_db.yml  inpatients_db_DEMO.csv  inpatients_demo.yml  inpatients_edited.yml  prescribing.yml  uuid_demo.yml
exhibit/sampledata/: data.py
exhibit/sampledata/_data/: basic_spec.yml  demo_spec.txt  inpatients.csv
exhibit/tests/: basic_spec.txt  test_exhibit.py  test_spec.yml
recipes/: Create Exhibit-compatible ML model.ipynb  Create geospatial lookup table using H3.ipynb  Create peer groups.ipynb  Peer Groups.ipynb  Using Exhibit in a script.py  Using SQL in anonymising sets.ipynb  Using custom functions in anonymising sets.ipynb  exhibit_scripting.py
