[metadata]
name = exhibit
version = 0.9.9
author = German Priks
author_email = german.priks@pm.me
description = Command line tool to generate anonymised demonstrator data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gherka/exhibit
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Security
[options]
packages = find:
include_package_data = true
python_requires = >=3.10
install_requires =
    dill == 0.3.8
    h3 == 3.7.7
    numpy == 2.1.1
    pandas == 2.2.3
    pyarrow == 17.0.0
    pyyaml == 6.0.2
    scipy == 1.14.1
    shapely == 2.0.6
    sql-metadata == 2.13.0
    sqlalchemy == 2.0.35

[options.entry_points]
console_scripts =
    exhibit = exhibit.command.bootstrap:main
[options.extras_require]
dev = memory_profiler
